# axum-demo

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile-no-build  Dockerfile-prebuilt  Makefile  README.md  TODO.md  build.rs  compose.yml  config.toml  config.yaml  docker-compose.yml  nginx.conf  release.sh  sqlx-data.json  stack.yml
.github/: dependabot.yml
.github/workflows/: build-and-deploy-prebuilt.yml  build-and-deploy.yml  build-and-test.yml  build-test-and-deploy.yml  build.yml  ci.yml  deploy.yml  my-app-AutoDeployTrigger-3b07185a-04d9-4f1e-b36b-3c5b8cdd8a3f.yml  my-app-AutoDeployTrigger-b03f7b9b-67d6-4407-8c35-4eee4741efee.yml  my-app-AutoDeployTrigger-c72333d5-2c95-4a81-ac3c-1f3c5a399cef.yml  release.yml  rust.yml  test.yml  test_and_deploy.yml
.sqlx/: query-156375d63c85a4e373aac578f675742cd03db052e35cafa7143bfe4bf6ce9dc6.json  query-16908cd933602950d0a8a1d539cbfd4bf7075d1cce4f305201a4e0afc70b71c7.json  query-251d19757d7125907521c68701b29fb85ab0a53532b9e9b204695dad19d4a9a8.json  query-467dcd7fd379750cbf30a190d06dc1b3e61b1bd7ef288fbf6fbedec52c276434.json  query-529e1ea3c6faa9e9a5403c9339b3623ac735ba0552f6e7d68051b697ae8d8118.json  query-5b344988366ad66da47c45379ac3dde98f6a0026df7b32ab93dfd31a8434afa7.json  query-63419e45c428d49eaa66cdb6ebae2e409bc622e7d06b2582cffa3077cb2d7f02.json  query-865176b8fe008839001253735e992c065fa09841956a317696b9eb27d3c555e9.json  query-a1fee42b588ce9d8b946c2fd9db80f7b6e83cf7e3a564bca9033700144ee1255.json  query-b0626a6d5a6a453b67146289b70293385004f08aeae65361fc2f263d9de4efec.json  query-c8eb640662a36043a76ca82aec60a10ec3b542f58fc0db5456dcdd8654163b16.json  query-d50ab4ebc40c4bd4249a6302a93b8b9c6da518f8a6ce374c6ff5e519d30ff485.json  query-e9829cf94b59b632332ad3304389999ed8a1b055593850c107d9cb90ddf34c69.json
benches/: criterion.rs
migrations/: 20221007213507_items.up.sql  20221010172743_users.up.sql  20221129204600_requests.up.sql  20221208163729_modify_requests.down.sql  20221208163729_modify_requests.up.sql  20230709143412_short_urls.down.sql  20230709143412_short_urls.up.sql  20230709143412_urls.up.sql
proto/: hello.proto  item.proto
src/: app.rs  grpc.rs  lib.rs  main.rs  rest.rs  server.rs
src/api/: mod.rs
src/api/grpc/: greeter.rs  item.rs  mod.rs
src/api/hello/: hello_api.rs
src/api/item/: item_api.rs  item_repository.rs  item_service.rs  mod.rs
src/api/request/: request_repository.rs
src/api/rest/: hello.rs  hello_api.rs  integration_api.rs  item_api.rs  items.rs  middleware.rs  mod.rs  user_api.rs
src/api/url/: mod.rs  url_api.rs  url_repository.rs
src/api/user/: user_api.rs
src/core/: mod.rs
src/core/greeting/: greeting_service.rs  mod.rs
src/core/item/: item_repository.rs  item_service.rs  mod.rs
src/core/request/: mod.rs  request_repository.rs
src/feature/: mod.rs
src/feature/hello/: hello_api.rs  hello_service.rs  mod.rs
src/feature/home/: home_api.rs  mod.rs
src/feature/info/: info_api.rs  mod.rs
src/feature/item/: item_api.rs  item_repository.rs  item_service.rs
src/feature/request/: request_repository.rs
src/feature/session/: mod.rs  session_api.rs
src/feature/url/: url_api.rs  url_repository.rs
src/feature/user/: user_api.rs
src/graphql/: graphql_item_api.rs  mod.rs  starwars.rs
src/grpc/: greeter.rs  item.rs  mod.rs
src/infra/: config.rs  database.rs  error.rs  extract.rs  http.rs  logging.rs  middleware.rs  mod.rs  openapi.rs  pagination.rs  security.rs  shutdown.rs  state.rs  validation.rs
src/infra/fixtures/: users.sql
src/integration/: client.rs  http.rs  mod.rs  mq.rs
src/repository/: item_repository.rs  mod.rs  request_repository.rs  user_repository.rs
src/rest/: email_api.rs  greeting_api.rs  hello.rs  hello_api.rs  info_api.rs  integration_api.rs  item_api.rs  items.rs  middleware.rs  mod.rs  openapi.rs  user_api.rs
src/service/: greeter.rs  item_service.rs  mod.rs
src/views/: index.rs  login.rs  logout.rs  mod.rs
static/: index.html  item-editor.html
templates/: base.html  index.html  login.html  session.html
