[package]
name = "axum-demo"
version = "0.1.23"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Web
axum = { version = "0.7.1", features = ["macros"] }
axum-extra = { version = "0.9.0", features = [
    "typed-routing",
    "json-lines",
    "typed-header",
    "async-read-body",
] }
tower = { version = "0.4.13", features = ["retry"] }
tower-http = { version = "0.5.0", features = [
    "tracing",
    "trace",
    "request-id",
    "propagate-header",
    "sensitive-headers",
    "set-header",
    "compression-gzip",
    "limit",
    "catch-panic",
    "timeout",
    "fs",
] }
tower-sessions = { version = "0.9.1", features = [
    "postgres-store",
    "deletion-task",
] }
http = "1.0.0"
http-body-util = "0.1.0"
hyper = "1.1.0"
tokio = { version = "1.35.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "tracing",
] }

# Docs
utoipa = { version = "4.1.0", features = [
    "axum_extras",
    "uuid",
    "time",
    "url",
] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "3.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "3.0.0", features = ["axum"] }

# Integration
sqlx = { version = "0.7.2", default_features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
reqwest = { version = "0.11.18", default-features = false, features = ["json"] }

# Serialization
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.87"

# Tracing
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "json",
    "ansi",
] }
tracing-appender = "0.2.2"
tracing-opentelemetry = { version = "0.22.0", default-features = false }
tracing-error = "0.2.0"
console-subscriber = "0.2.0"
opentelemetry-jaeger = "0.20.0"
opentelemetry = { version = "0.21.0", default-features = false, features = [
    "trace",
] }

# Utilities
config = "0.13.2"
uuid = { version = "1.6.1", features = ["v4"] }
bcrypt = "0.15.0"
thiserror = "1.0.56"
color-eyre = "0.6.2"
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
cached = { version = "0.47.0", features = ["async"] }
bytes = "1.5.0"
futures = "0.3.25"
async-stream = "0.3.5"
slab = "0.4.8"
dotenv = "0.15.0"
validator = { version = "0.16.1", features = ["derive"] }
base64 = "0.21.2"
askama = "0.12.1"
askama_axum = "0.4.0"
time = "0.3.31"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
tokio-test = "0.4.2"

[[bench]]
name = "criterion"
harness = false
