[package]
name = "axum-demo"
version = "0.1.23"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Web
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = [
    "typed-routing",
    "json-lines",
    "typed-header",
    "async-read-body",
] }
tower = { version = "0.5.2", features = ["retry", "limit"] }
tower-http = { version = "0.6.2", features = [
    "tracing",
    "trace",
    "request-id",
    "propagate-header",
    "sensitive-headers",
    "set-header",
    "compression-gzip",
    "limit",
    "catch-panic",
    "timeout",
    "fs",
] }
tower-sessions = { version = "0.14.0" }
tower-sessions-sqlx-store = { version = "0.15.0", default-features = false, features = ["postgres"] }
http = "1.2.0"
http-body-util = "0.1.0"
hyper = "1.6.0"
tokio = { version = "1.43.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "tracing",
] }

# Docs
utoipa = { version = "5.3.1", features = [
    "axum_extras",
    "uuid",
    "chrono",
    "url",
    "time"
] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "reqwest"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }

# Integration
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
reqwest = { version = "0.12.8", default-features = false, features = ["json"] }

# Serialization
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.87"

# Tracing
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "json",
    "ansi",
] }
tracing-appender = "0.2.2"
tracing-opentelemetry = { version = "0.24.0", default-features = false }
tracing-error = "0.2.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16.0" }
opentelemetry = { version = "0.23.0", default-features = false, features = [
    "trace",
] }

# Utilities
config = "0.14.0"
uuid = { version = "1.8.0", features = ["v4"] }
bcrypt = "0.15.0"
thiserror = "1.0.64"
color-eyre = "0.6.2"
chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
cached = { version = "0.53.1", features = ["async"] }
bytes = "1.7.2"
futures = "0.3.31"
async-stream = "0.3.6"
slab = "0.4.8"
dotenvy = "0.15.7"
validator = { version = "0.18.0", features = ["derive"] }
base64 = "0.22.1"
askama = "0.12.1"
askama_axum = "0.4.0"
time = "0.3.31"
humantime-serde = "1.1.1"

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
tokio-test = "0.4.2"

[[bench]]
name = "criterion"
harness = false
